--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         :root {
-            --black: #121212;
+            --yellow: #FFFF00;
             --dark-black: #0a0a0a;
             --light-black: #1e1e1e;
             --dark-red: #8b0000;
